# tallylint

./: .env  .gitignore  Cargo.toml  Dev_Doc.md  README.md  canister_ids.json  components.d.ts  dfx - Copy_这个前端依赖了vote_backend.json  dfx.json  dfx_readme.md  git_add.sh  index.html  index.html.2  manage  package-lock.json  package.json  predeploy.sh  rust-toolchain.toml  rustfmt.toml  start.sh  test.json  test.txt  tsconfig.json  vite.config.ts  works.md
backend/: Cargo.toml  backend.did  install_code_with_skip_pre_upgrade.md  payload.json  readme.md  storage_to_know.md
backend/canisters/backend/: Cargo.toml  backend.did  new_struct.json
backend/canisters/backend/declarations/backend/: backend.did.d.ts
backend/canisters/backend/my_tests/: agent_test.rs  it1.rs  unittest.rs
backend/canisters/backend/my_tests/basic_test/: read_EOF.rs
backend/canisters/backend/my_tests/test_in_cmd/: CICD_ic.sh
backend/canisters/backend/my_tests/wasm_debug/: main.rs
backend/canisters/backend/src/: lib.rs
backend/canisters/backend/src/c2c/: mod.rs
backend/canisters/backend/src/c_http/: TODO.md  api.rs  mod.rs  non_replicate_http.rs  post.rs
backend/canisters/backend/src/canister_api/: api.rs  mod.rs  service.rs
backend/canisters/backend/src/common/: api.rs  backup.rs  constants.rs  context.rs  data copy.json  data.json  env.rs  guard.rs  life_cycle.rs  memory.rs  mod.rs  state_machine.rs  times.rs
backend/canisters/backend/src/http/: http.rs
backend/canisters/backend/src/lifecycle/: gen_did.rs  (+3 more)
backend/canisters/backend/tests/: agent_test.rs  integration_test.rs  mod.rs
backend/canisters/main/: Cargo.toml
backend/declarations/backend/: backend.did.js  index.js
backend/did/: did.sh  gen_did.sh
backend/i_test/: Cargo.toml  new_struct.json  pl01 copy 2.json  pl01_copy.json  pl_01_no_newline.json
backend/i_test/py_agent/: upload_db_json_string  upload_db_json_string.py
backend/i_test/src/: hello.c  introspec.py  lib.rs  main.rs  test.json  test.py
backend/i_test/src/backend_test/: nns_wallet_test.rs
backend/i_test/src/client/: macros.rs  mod.rs  setup.rs  user.rs  utils.rs  wasms.rs
backend/integration_tests/: Cargo.toml  README.md
backend/integration_tests/src/: lib.rs  main.rs
backend/integration_tests/src/backend_test/: nns_wallet_test.rs  test.rs
backend/integration_tests/src/client/: mod.rs  rng.rs  setup.rs  utils.rs  wasms.rs
backend/lib/candid_gen/src/: lib.rs
backend/lib/canister_agent_utils/: Cargo.toml
backend/lib/canister_agent_utils/src/: lib.rs
backend/lib/canister_logger/src/: lib.rs
backend/lib/canister_time/src/: lib.rs
backend/lib/canister_tracing_macros/src/: lib.rs
backend/lib/canister_upgrader/: Cargo.toml
backend/lib/canister_upgrader/src/: main.rs
backend/lib/my_types/: Cargo.toml
backend/lib/my_types/src/: avatar.rs  bots.rs  build_version.rs  canister_upgrade_status.rs  canister_wasm.rs  channel_summary.rs  chat.rs  chat_id.rs  chat_summary.rs  community_id.rs  community_member.rs  community_roles.rs  community_summary.rs  cryptocurrency.rs  cycles.rs  deleted_group_info.rs  diamond_membership.rs  event_index.rs  event_result.rs  event_wrapper.rs  events.rs  exchange_id.rs  exchanges.rs  field_invalid.rs  file.rs  file_status.rs  frozen_group_info.rs  gated_groups.rs  group_activity.rs  group_match.rs  group_member.rs  group_roles.rs  http.rs  indexed_event.rs  lib.rs  mention.rs  message.rs  message_content.rs  message_id.rs  message_index.rs  (+21 more)
backend/lib/serializer/: Cargo.toml
backend/lib/serializer/src/: lib.rs
backend/lib/sha256_versions/: Cargo.toml
backend/lib/sha256_versions/src/: main.rs
backend/lib/stable_memory/: Cargo.toml
backend/lib/stable_memory/src/: lib.rs
backend/main/: Cargo.toml
backend/main/src/canister_api/: service.rs
backend/main/src/common/: guard.rs  state_machine.rs
backend/main/src/nns/: api.rs
backend/main/src/user/: mod.rs
backend/main/src/wallet/: mod.rs
backend/main/tests/: unittest.rs
backend/ohter_test/: c2ctest.rs
backend/ohter_test/c2ctest/: Cargo.toml  README.md  dfx.json  package.json  webpack.config.js
backend/ohter_test/c2ctest/c2c_call/: Cargo.toml  README.md  canister_ids.json  dfx.json  package.json  webpack.config.js
backend/ohter_test/pic_test/: Cargo.toml  readme.md
backend/ohter_test/pic_test/src/: main.rs
backend/ohter_test/serde_test/serde_test/: Cargo.toml
backend/ohter_test/sns_price_his/: a.json  b.json
backend/ohter_test/tax_test/: main.rs
backend/ohter_test/wasm_test/: hello.c
backend/rs_agent/: Cargo.toml  new_ctx_struct.json  new_ctx_struct_all_ic_data.json  pl01 copy 2.json  pl01.json  pl_01_no_newline.json  update_pocket_ic.sh
backend/rs_agent/py_agent/: upload_db_json_string2.py
backend/rs_agent/rs_agent/: main.rs
backend/rs_agent/src/: main copy.rs  main.rs
backend/rs_agent/src/backend_test/: mod.rs  nns_wallet_test.rs
backend/scripts/: change_name.sh  convert_timestamp_to_datetime  deploy.py  deploy_backend  deploy_ic.exp  deploy_local.exp  exec_dfx_with_passwd.exp  gen_did.sh  get_base_dir.sh  get_proj_base_dir.sh  git_add.sh  ic_deploy.sh  init_dapp.sh  my_deploy.sh  post_install.sh  remove_ignore_history_in_git.sh  sync_remote.sh  vpn.sh  vpn_stop.sh
backend/src/: actor.rs  api.rs  context.rs  domain.rs  env.rs  lib.rs  test.md  upgrade.rs
backend/src/canister_api/: api.rs  mod.rs  service.rs
backend/src/common/: context.rs  env.rs  guard.rs  mod.rs  state_machine.rs  times.rs
backend/src/nns/: api.rs  domain.rs  mod.rs  service.rs
backend/src/user/: api.rs  domain.rs  mod.rs  service.rs
backend/src/wallet/: api.rs  domain.rs  mod.rs  service.rs
backend/test/: gpt_api.py
backend/test/Rust_ThreaLocal/: TL.c  a.out  test1.java  test1.rs
backend/test/dfx_calls/: dfx.sh  dfx_call_cainter_test.sh
backend/test/pocket_ic_test/: Cargo.toml
backend/test/pocket_ic_test/src/: main.rs
backend/test_in_cmd/dfx_calls/: dfx_call_cainter_test.sh
backend/tests/: agent_test.rs  integration_test.rs
backend/tests/test_in_cmd/dfx_calls/: dfx_call_cainter_test.sh
backend/tests/test_py/: test.py
(+178 files in other folders)
