[workspace]
members = [
    "backend/canisters/backend",
    
    "backend/integration_tests",

    "backend/lib/canister_tracing_macros",
    "backend/lib/canister_logger",
    "backend/lib/canister_time",

]
resolver = "2"

[workspace.dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
candid = "0.9.11"
serde = "1.0.192"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_tokenstream = "0.2.0"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
ic0 = "0.21.1"


lazy_static = "1.4.0"

# testing:
# some times compile fail. need to mention. and fix .
pocket-ic = "2.0.1"
rand = "0.8.5"
