[workspace]
members = [
    # main:
    "backend/canisters/backend",

    # lib
    "backend/lib/canister_tracing_macros",
    "backend/lib/canister_logger",
    "backend/lib/canister_time",
    "backend/lib/candid_gen",
    "backend/lib/serializer",
    "backend/lib/stable_memory",
    # "backend/lib/canister_agent_utils",
    # "backend/lib/my_types",
    # "backend/lib/canister_upgrader",
    # "backend/lib/sha256_versions",

    # test to mock a ic-repica local and exec wasm canister code .
    # FIXME candid version conlflict with cansiter_upgrader.
    # "backend/integration_tests",
]
resolver = "2"

[workspace.dependencies]
ic-cdk = "0.11.3"
ic-stable-structures = "0.6.0"



proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
candid = "0.9.11"
# candid_derive ="0.6.4"
serde = "1.0.192"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_tokenstream = "0.2.0"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
ic0 = "0.21.1"


lazy_static = "1.4.0"

# testing:
# some times compile fail. need to mention. and fix .
pocket-ic = "2.0.1"
rand = "0.8.5"

rmp-serde = "1.1.2"



