[workspace]
members = [
    #### main:
    "backend/canisters/backend",

    #### lib
    "backend/lib/canister_tracing_macros",
    "backend/lib/canister_logger",
    "backend/lib/canister_time",
    "backend/lib/candid_gen",
    "backend/lib/serializer",
    "backend/lib/stable_memory",
    # "backend/lib/canister_agent_utils",
    # "backend/lib/my_types",
    # "backend/lib/canister_upgrader",
    # "backend/lib/sha256_versions",

    # test to mock a ic-repica local and exec wasm canister code .
    # FIXME candid version conlflict with cansiter_upgrader.
    # "backend/integration_tests",

    #### test
    # "backend/test/pocket_ic_test",
    "backend/i_test",

]
resolver = "2"

[workspace.dependencies]
ic-cdk = "0.12.0"
ic-stable-structures = "0.6.0"



proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
candid = "0.10.3"
dfx-core = { git = "https://github.com/dfinity/sdk", rev = "c7fa9267950836fb2e8af2f03a6531ead9289f81" } # openchat use
ic-agent = "0.33.0"
ic-utils = "0.33.0"
# dfx-core = { git = "https://github.com/dfinity/sdk"}# latest-2024-2-22
# ic-agent =  { git = "https://github.com/dfinity/agent-rs.git", rev = "b74445e1da0a6afefc3a08372f74e8ea416cd1ba" }
# ic-utils =  { git = "https://github.com/dfinity/agent-rs.git", rev = "b74445e1da0a6afefc3a08372f74e8ea416cd1ba" }
itertools = "0.12.1"
slog = "2.7.0"
ic-ledger-types = "0.9.0"
ic-cdk-timers = "0.6.0"
serde = "1.0.192"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_tokenstream = "0.2.0"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
ic0 = "0.21.1"
lazy_static = "1.4.0"

# testing:
# some times compile fail. need to mention. and fix .
pocket-ic = "2.2.0"
rand = "0.8.5"
rmp-serde = "1.1.2"



