[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
  "cdylib",
] #  necessary to compile this Rust program into WebAssembly module.


[dependencies]
candid = "0.9.6" # for abstraction from backend language . some kind of middle language . decoupling 
# example : rust-backend -> did code  ; python-backend -> did code .

# The core of Rust CDK :
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0" # Feel free to remove this dependency if you don't need timers


# ic-DB : called "stable memory" 
ic-cdk-macros = "0.7.1"
ic-stable-structures = "0.5.6"


# openai_api_rust = "0.1.8"
# chatgpt_rs = "1.2.0" # 这个包造成大量的编译错误,目前和ic-cdk有兼容问题,单独跑chagpt_rs可以跑通


# from dep of dao-rights
serde = "1.0.188"
thiserror = "1.0.48"
email_address = "0"


#new
rand = "0.5.5" 
ic-kit = "0.4.8"
random-string = "1.0.0"
js-sys = "0.3"
wasm-bindgen = "0.2"