[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
  "cdylib",
] #  necessary to compile this Rust program into WebAssembly module.


[dependencies]
# 099 or 096 confilct with nns goveranance.
candid = "0.9.9" # for abstraction from backend language . some kind of middle language . decoupling 
# example : rust-backend -> did code  ; python-backend -> did code .
# 099 for rustc nightly version: rustup update nightly
# back to stable: rustup default stable   or: rustup default nightly 
# The core of Rust CDK :
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.7.1"

# ic-DB : called "stable memory" 
ic-stable-structures = "0.5.6"

# from dep of dao-rights
serde = "1.0.188"
thiserror = "1.0.48"
email_address = "0"

#new
log = "0.4.20"
# ic-nns-governance = "0.8.0"
# ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "42a4bc4b7917a44c58c9cf907d84b9fd8e908ed9" }
# ic-nns-governance = { git = "https://github.com/dfinity/ic" }

# nns use:
serde_bytes = "0.11.5"


