[package]
name = "i_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
pocket-ic = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rand = { workspace = true }
chrono = "0.4.31"
icrc-ledger-types = { workspace = true }
termion = "3.0.0"# IMPORTANT hidden FATAL 
#! this will cause ld(link) error in compile very hidden bug!!!, 
# backend = { path = "../canisters/backend/" }