[package]
name = "backend"
# TODO somehow middle important level
# name should be main_cainster
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
  "cdylib",
] #  necessary to compile this Rust program into WebAssembly module.
# cdy: "C Dynamic Library."
path = "src/lib.rs"

[dependencies]
# 099 or 096 confilct with nns goveranance.
candid = "0.9.11" # for abstraction from backend language . some kind of middle language . decoupling 
# example : rust-backend -> did code  ; python-backend -> did code .
# 099 for rustc nightly version: rustup update nightly
# back to stable: rustup default stable   or: rustup default nightly 
# The core of Rust CDK :
ic-cdk = "0.11.3"
ic-cdk-timers = "0.5.1" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.8.1"

# ic-DB : called "stable memory" 
ic-stable-structures = "0.6.0"

# from dep of dao-rights
serde = "1.0.190"
thiserror = "1.0.48"
# email_address = "0"

#new
# log = "0.4.20"
# ic-nns-governance = "0.8.0"
# ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "42a4bc4b7917a44c58c9cf907d84b9fd8e908ed9" }
# ic-nns-governance = { git = "https://github.com/dfinity/ic" }

# nns use:
serde_bytes = "0.11.12"

# candid-extractor="0.1.2"
# only need to use in terminal 

# use for plug 
ic-ledger-types = "0.8.0"

# project itself declare. dont know its mechineism. but works - - 
# backend = "0.1.0"




# logging:
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
canister_tracing_macros = { path = "../../lib/canister_tracing_macros" } # this path ../ here is not so convinient for universal use. push the lib to crate.io(or any self hold lib) will be better ?
canister_logger = { path = "../../lib/canister_logger" }


# getrandom = "0.2.11"
getrandom = { version = "0.2.11", features = ["js"] }
tokio = "1.34.0"


########   DEV lib scope   ########
[dev-dependencies]
#!this above means testing dep scope, avoid dep not compatible with something.
# be careful with this scope. down this [] all dep will only on dev scope.
# i think {} to specifiy the scope as syntax here will be more obvious and clear.

# testing:
pocket-ic = "2.0.1"

# simulate  CLI call ic-replica (dfx) using rust code .
ic-agent = "0.30.2"

candid_gen = { path = "../../lib/candid_gen" }

########   DEV lib scope   ########