[package]
name = "canister_agent_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
dfx-core = { workspace = true }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
itertools = { workspace = true }
slog = { workspace = true }
my_types = { path = "../my_types" }
# ic-utils =  { git = "https://github.com/dfinity/agent-rs.git", rev = "b74445e1da0a6afefc3a08372f74e8ea416cd1ba" }
# ic-utils = "0.29.0"
