[package]
name = "canister_upgrader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# this commit tag is : skip_pre_upgrade hot fix 

# TODO maybe need to mannually go into local src code of ic-utils and change the src code base thsi commit.
# ic-utils =  { git = "https://github.com/dfinity/agent-rs.git", rev = "b74445e1da0a6afefc3a08372f74e8ea416cd1ba" }
candid = { workspace = true } # for abstraction from backend language . some kind of middle language . decoupling 
ic-utils = { workspace = true }
ic-agent = { workspace = true }

canister_agent_utils = { path = "../canister_agent_utils" }
