
[package]
name = "pic_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = "5.0.0"
chrono = "0.4.31"


#### to keep it out of the tallylint workspace ####
# make the target folder just under here . handy to find binary exec and run it .
[workspace]

