[package]
name = "c2c_call_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers

serde = "1.0.192"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_tokenstream = "0.2.0"
candid = "0.9.11"
ic-cdk = "0.11.3"